[deaton] random push.

--- a/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2021-07-11_snakemake_lDE20/analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2021-07-11_snakemake_lDE20/analysis.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LATER MERGE WORKFLOW WITH OLDER GFP PLUS NOTEBOOK"
+    "### Merge with lDE18 changes before final analysis"
    ]
   },
   {
@@ -239,7 +239,7 @@
     "plt.ylabel(\"Percent Positive\", fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_1.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "# plt.savefig(\"./figure_1.png\",dpi=300,bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -391,13 +391,6 @@
     "    working_directory=\"/home/de64/scratch/de64/sync_folder/2021-05-22_snakemake_lDE20/dask\",\n",
     ")\n",
     "\n",
-    "# dask_controller = dask_controller(\n",
-    "#     local=True,\n",
-    "#     n_workers=1,\n",
-    "#     memory=\"16GB\",\n",
-    "#     working_directory= \"/home/de64/scratch/de64/sync_folder/2021-01-28_snakemake_lDE14/dask\",\n",
-    "# )\n",
-    "\n",
     "dask_controller.startdask()"
    ]
   },
@@ -433,7 +426,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "n_chunks = 5\n",
@@ -518,7 +513,7 @@
     "plt.xlabel(\"Closest Hamming Distance\", fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_2.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "# plt.savefig(\"./figure_2.png\",dpi=300,bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -532,7 +527,7 @@
     "plt.xlabel(\"Closest Hamming Distance\", fontsize=20)\n",
     "plt.xticks([0.25, 0.75], [0, 1], fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_3.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "# plt.savefig(\"./figure_3.png\",dpi=300,bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -763,6 +758,7 @@
     "merged_df = valid_data_df.reset_index(drop=True).join(\n",
     "    sgRNA_data_subset[\n",
     "        [\n",
+    "            \"oDEPool7_id\",\n",
     "            \"EcoWG1_id\",\n",
     "            \"Gene\",\n",
     "            \"Strand\",\n",
@@ -872,7 +868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
