--- a/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2021-09-16_snakemake_lDE15_v2/analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2021-09-16_snakemake_lDE15_v2/analysis.ipynb
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import dask.dataframe as dd\n",
     "\n",
     "\n",
     "from Bio import SeqIO\n",
@@ -152,6 +153,10 @@
     "    return hamming_dict\n",
     "\n",
     "\n",
+    "### Trying to eliminate this and only deal with bit drops on the mother machine\n",
+    "### experimental step. should be possible.\n",
+    "\n",
+    "\n",
     "def remove_bits_from_barcode(barcode, removed_bits=[]):\n",
     "    # Will convert removed bits to 0 values\n",
     "\n",
@@ -166,10 +171,6 @@
     "    # Will convert removed bits to 0 values\n",
     "\n",
     "    in_df = copy.deepcopy(df)\n",
-    "    #     removed_bits = (removed_bits)\n",
-    "\n",
-    "    #     all_bits = set(range(len(in_df[\"barcode\"].iloc[0])))\n",
-    "    #     kept_bits = list(all_bits-removed_bits)\n",
     "\n",
     "    subsampled_barcode = in_df[\"barcode\"].apply(\n",
     "        remove_bits_from_barcode, removed_bits=removed_bits\n",
@@ -188,8 +189,6 @@
     "    )\n",
     "    in_df = in_df.rename({\"subsampled_barcode\": \"barcode\"}, axis=1)\n",
     "    in_df[\"barcodeid\"] = in_df.index\n",
-    "    #     in_df[\"removed_bits\"] = removed_bits\n",
-    "    #     in_df.insert(0, 'removed_bits', [removed_bits for i in range(len(in_df))])\n",
     "\n",
     "    return in_df"
    ]
@@ -200,16 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_metadata = {\"removed_bits\": [1]}\n",
-    "data = pd.read_csv(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-03-02_snakemake_lDE15/output.tsv\",\n",
-    "    delimiter=\"\\t\",\n",
-    ")\n",
-    "## Removing the problem bit for RFP, second cycle\n",
-    "data = remove_bits(data, output_metadata[\"removed_bits\"])\n",
-    "ref_intervals = get_ref_intervals(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-03-02_snakemake_lDE15/ref.gfa\"\n",
-    ")\n",
+    "data = pd.read_csv(\"./output.tsv\", delimiter=\"\\t\")\n",
+    "ref_intervals = get_ref_intervals(\"./aDE8_9.gfa\")\n",
     "barcodes = set(data[\"barcode\"].tolist())"
    ]
   },
@@ -240,11 +231,11 @@
    "source": [
     "fig = plt.figure(figsize=(16, 6))\n",
     "sns.barplot(x=list(range(len(bit_freq))), y=bit_freq, color=\"grey\")\n",
-    "plt.xlabel(\"Bit Number\", fontsize=20)\n",
-    "plt.ylabel(\"Percent Positive\", fontsize=20)\n",
+    "plt.xlabel(\"Bit Number\", fontsize=26)\n",
+    "plt.ylabel(\"Percent Positive\", fontsize=26)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_1.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"./bit_frequency.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -503,7 +494,7 @@
     "plt.xlabel(\"Closest Hamming Distance\", fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_2.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"./hamming_distribution.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -517,7 +508,72 @@
     "plt.xlabel(\"Closest Hamming Distance\", fontsize=20)\n",
     "plt.xticks([0.25, 0.75], [0, 1], fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_3.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"./hamming_distribution_zoom.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Depth Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle as pkl\n",
+    "\n",
+    "with open(\"barcode_counts_dict.pkl\", \"rb\") as infile:\n",
+    "    depth_dict = pkl.load(infile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depth_arr = np.array(list(depth_dict.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "threshold = 15\n",
+    "\n",
+    "under_threshold_arr = depth_arr[depth_arr < threshold]\n",
+    "above_threshold_arr = depth_arr[depth_arr >= threshold]\n",
+    "plt.hist(\n",
+    "    under_threshold_arr,\n",
+    "    bins=200,\n",
+    "    range=(0, 200),\n",
+    "    log=True,\n",
+    "    color=\"grey\",\n",
+    "    label=\"Under Threshold\",\n",
+    ")\n",
+    "plt.hist(\n",
+    "    above_threshold_arr,\n",
+    "    bins=200,\n",
+    "    range=(0, 200),\n",
+    "    log=True,\n",
+    "    color=\"tab:blue\",\n",
+    "    label=\"Above Threshold\",\n",
+    ")\n",
+    "plt.xlabel(\"Read Depth\", fontsize=20)\n",
+    "plt.xticks(fontsize=20)\n",
+    "plt.ylabel(\"N Barcodes\", fontsize=20)\n",
+    "plt.yticks(fontsize=20)\n",
+    "plt.legend(fontsize=20)\n",
+    "plt.savefig(\"./depth_distribution.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -528,15 +584,6 @@
    "outputs": [],
    "source": [
     "len(closest_match_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dask.dataframe as dd"
    ]
   },
   {
@@ -564,9 +611,7 @@
     "    axis=1,\n",
     ").persist()\n",
     "## Use GFA reference to determine intervals for each annotation\n",
-    "ref_intervals = get_ref_intervals(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-01-28_snakemake_lDE14/ref.gfa\"\n",
-    ")\n",
+    "ref_intervals = get_ref_intervals(\"./aDE8_9.gfa\")\n",
     "## Split sequences based on annotated intervals\n",
     "split_ref = data_df.apply(\n",
     "    lambda x: splitstr(x[\"reference\"], ref_intervals), axis=1\n",
@@ -585,7 +630,7 @@
     "dark_gfp = (\n",
     "    data_df.apply(\n",
     "        lambda x: slow_hamming_distance(\n",
-    "            x[\"split_align\"][\"GFP\"][623:625], x[\"split_ref\"][\"GFP\"][623:625]\n",
+    "            x[\"split_align\"][\"Variant\"][623:625], x[\"split_ref\"][\"Variant\"][623:625]\n",
     "        ),\n",
     "        axis=1,\n",
     "        meta=int,\n",
@@ -635,16 +680,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "## Metadata stored as a json for later\n",
-    "import json\n",
-    "\n",
-    "with open(\"./lDE15_final_df.json\", \"w\") as f:\n",
-    "    json.dump(output_metadata, f)"
+    "## Storing dataframe as a csv\n",
+    "data_df.to_csv(\"./lDE15_final_df.tsv\", sep=\"\\t\")"
    ]
   },
   {
@@ -653,8 +693,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Storing dataframe as a csv\n",
-    "data_df.to_csv(\"./lDE15_final_df.tsv\", sep=\"\\t\")"
+    "dask_controller.shutdown()"
    ]
   },
   {
