--- a/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2021-09-24_snakemake_lDE20_v2/analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2021-09-24_snakemake_lDE20_v2/analysis.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LATER MERGE WORKFLOW WITH OLDER GFP PLUS NOTEBOOK"
+    "### Merge with lDE15 changes before final analysis"
    ]
   },
   {
@@ -149,49 +149,7 @@
     "    hamming_dict = {\n",
     "        key: slow_hamming_distance(dict1[key], dict2[key]) for key in dict1.keys()\n",
     "    }\n",
-    "    return hamming_dict\n",
-    "\n",
-    "\n",
-    "def remove_bits_from_barcode(barcode, removed_bits=[]):\n",
-    "    # Will convert removed bits to 0 values\n",
-    "\n",
-    "    barcode = np.array(list(barcode))\n",
-    "    barcode[removed_bits] = 0\n",
-    "    barcode = \"\".join(barcode.tolist())\n",
-    "\n",
-    "    return barcode\n",
-    "\n",
-    "\n",
-    "def remove_bits(df, removed_bits):\n",
-    "    # Will convert removed bits to 0 values\n",
-    "\n",
-    "    in_df = copy.deepcopy(df)\n",
-    "    #     removed_bits = (removed_bits)\n",
-    "\n",
-    "    #     all_bits = set(range(len(in_df[\"barcode\"].iloc[0])))\n",
-    "    #     kept_bits = list(all_bits-removed_bits)\n",
-    "\n",
-    "    subsampled_barcode = in_df[\"barcode\"].apply(\n",
-    "        remove_bits_from_barcode, removed_bits=removed_bits\n",
-    "    )\n",
-    "    in_df[\"subsampled_barcode\"] = subsampled_barcode\n",
-    "    unique_barcodes, n_occurances = np.unique(subsampled_barcode, return_counts=True)\n",
-    "    redundant_barcodes = unique_barcodes[n_occurances > 1]\n",
-    "    redundant_indices = subsampled_barcode[\n",
-    "        subsampled_barcode.isin(redundant_barcodes.tolist())\n",
-    "    ].index\n",
-    "\n",
-    "    in_df = (\n",
-    "        in_df.drop(redundant_indices)\n",
-    "        .reset_index(drop=True)\n",
-    "        .drop([\"Unnamed: 0\", \"barcodeid\", \"barcode\"], axis=1)\n",
-    "    )\n",
-    "    in_df = in_df.rename({\"subsampled_barcode\": \"barcode\"}, axis=1)\n",
-    "    in_df[\"barcodeid\"] = in_df.index\n",
-    "    #     in_df[\"removed_bits\"] = removed_bits\n",
-    "    #     in_df.insert(0, 'removed_bits', [removed_bits for i in range(len(in_df))])\n",
-    "\n",
-    "    return in_df"
+    "    return hamming_dict"
    ]
   },
   {
@@ -200,16 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_metadata = {\"removed_bits\": [1]}\n",
-    "data = pd.read_csv(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-03-02_snakemake_lDE15/output.tsv\",\n",
-    "    delimiter=\"\\t\",\n",
-    ")\n",
-    "## Removing the problem bit for RFP, second cycle\n",
-    "data = remove_bits(data, output_metadata[\"removed_bits\"])\n",
-    "ref_intervals = get_ref_intervals(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-03-02_snakemake_lDE15/ref.gfa\"\n",
-    ")\n",
+    "data = pd.read_csv(\"../2021-07-11_snakemake_lDE20/output.tsv\", delimiter=\"\\t\")\n",
+    "ref_intervals = get_ref_intervals(\"./aDE12.gfa\")\n",
     "barcodes = set(data[\"barcode\"].tolist())"
    ]
   },
@@ -229,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(bit_freq)"
+    "bit_arr"
    ]
   },
   {
@@ -244,8 +194,17 @@
     "plt.ylabel(\"Percent Positive\", fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_1.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "# plt.savefig(\"./figure_1.png\",dpi=300,bbox_inches=\"tight\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(barcodes)"
    ]
   },
   {
@@ -277,7 +236,7 @@
     "            os.makedirs(directory)\n",
     "\n",
     "\n",
-    "class dask_controller:  # adapted from Charles' code\n",
+    "class tr_dask_controller:  # adapted from Charles' code\n",
     "    def __init__(\n",
     "        self,\n",
     "        n_workers=6,\n",
@@ -379,20 +338,13 @@
    },
    "outputs": [],
    "source": [
-    "dask_controller = dask_controller(\n",
+    "dask_controller = tr_dask_controller(\n",
     "    walltime=\"02:00:00\",\n",
     "    local=False,\n",
     "    n_workers=50,\n",
     "    memory=\"16GB\",\n",
-    "    working_directory=\"/home/de64/scratch/de64/sync_folder/2021-03-02_snakemake_lDE15/dask/\",\n",
+    "    working_directory=\"/home/de64/scratch/de64/sync_folder/2021-05-22_snakemake_lDE20/dask\",\n",
     ")\n",
-    "\n",
-    "# dask_controller = dask_controller(\n",
-    "#     local=True,\n",
-    "#     n_workers=1,\n",
-    "#     memory=\"16GB\",\n",
-    "#     working_directory= \"/home/de64/scratch/de64/sync_folder/2021-01-28_snakemake_lDE14/dask\",\n",
-    "# )\n",
     "\n",
     "dask_controller.startdask()"
    ]
@@ -429,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "n_chunks = 5\n",
@@ -494,6 +448,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### These are not the plots we want in the final draft\n",
+    "\n",
+    "The final distribution should come from the bit-subtracted histograms extractable from the final pandas df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -503,7 +466,7 @@
     "plt.xlabel(\"Closest Hamming Distance\", fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_2.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "# plt.savefig(\"./figure_2.png\",dpi=300,bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -517,7 +480,72 @@
     "plt.xlabel(\"Closest Hamming Distance\", fontsize=20)\n",
     "plt.xticks([0.25, 0.75], [0, 1], fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
-    "plt.savefig(\"./figure_3.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "# plt.savefig(\"./figure_3.png\",dpi=300,bbox_inches=\"tight\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Depth Distribution (waiting to rerun snakemake)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle as pkl\n",
+    "\n",
+    "with open(\"barcode_counts_dict.pkl\", \"rb\") as infile:\n",
+    "    depth_dict = pkl.load(infile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depth_arr = np.array(list(depth_dict.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "threshold = 15\n",
+    "\n",
+    "under_threshold_arr = depth_arr[depth_arr < threshold]\n",
+    "above_threshold_arr = depth_arr[depth_arr >= threshold]\n",
+    "plt.hist(\n",
+    "    under_threshold_arr,\n",
+    "    bins=200,\n",
+    "    range=(0, 200),\n",
+    "    log=True,\n",
+    "    color=\"grey\",\n",
+    "    label=\"Under Threshold\",\n",
+    ")\n",
+    "plt.hist(\n",
+    "    above_threshold_arr,\n",
+    "    bins=200,\n",
+    "    range=(0, 200),\n",
+    "    log=True,\n",
+    "    color=\"tab:blue\",\n",
+    "    label=\"Above Threshold\",\n",
+    ")\n",
+    "plt.xlabel(\"Read Depth\", fontsize=20)\n",
+    "plt.xticks(fontsize=20)\n",
+    "plt.ylabel(\"N Barcodes\", fontsize=20)\n",
+    "plt.yticks(fontsize=20)\n",
+    "plt.legend(fontsize=20)\n",
+    "# plt.savefig(\"./depth_distribution.png\",dpi=300,bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -528,6 +556,41 @@
    "outputs": [],
    "source": [
     "len(closest_match_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller = tr_dask_controller(\n",
+    "    walltime=\"02:00:00\",\n",
+    "    local=False,\n",
+    "    n_workers=10,\n",
+    "    memory=\"16GB\",\n",
+    "    working_directory=\"/home/de64/scratch/de64/sync_folder/2021-05-22_snakemake_lDE20/dask\",\n",
+    ")\n",
+    "\n",
+    "dask_controller.startdask()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller.daskclient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller.shutdown()"
    ]
   },
   {
@@ -564,9 +627,7 @@
     "    axis=1,\n",
     ").persist()\n",
     "## Use GFA reference to determine intervals for each annotation\n",
-    "ref_intervals = get_ref_intervals(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-01-28_snakemake_lDE14/ref.gfa\"\n",
-    ")\n",
+    "ref_intervals = get_ref_intervals(\"./aDE12.gfa\")\n",
     "## Split sequences based on annotated intervals\n",
     "split_ref = data_df.apply(\n",
     "    lambda x: splitstr(x[\"reference\"], ref_intervals), axis=1\n",
@@ -581,29 +642,26 @@
     "hamm_ref = data_df.apply(\n",
     "    lambda x: get_dict_dist(x[\"split_align\"], x[\"split_ref\"]), axis=1, meta=dict\n",
     ").persist()\n",
-    "## Get hamming distance from reference of the nucleotides which vary in the library, to determine GFP vs DarkGFP\n",
-    "dark_gfp = (\n",
-    "    data_df.apply(\n",
-    "        lambda x: slow_hamming_distance(\n",
-    "            x[\"split_align\"][\"GFP\"][623:625], x[\"split_ref\"][\"GFP\"][623:625]\n",
-    "        ),\n",
-    "        axis=1,\n",
-    "        meta=int,\n",
-    "    )\n",
-    "    > 0\n",
-    ").persist()\n",
+    "\n",
+    "## Get promoters and UMIs\n",
+    "UMI = data_df[\"split_align\"].apply(lambda x: x[\"Variant\"][274:294], meta=str).persist()\n",
+    "sgRNA = (\n",
+    "    data_df[\"split_align\"]\n",
+    "    .apply(lambda x: str(Seq(x[\"Variant\"][175:195]).reverse_complement()), meta=str)\n",
+    "    .persist()\n",
+    ")\n",
     "## Assign closest match to each barcode (for costructing output df later)\n",
     "closest_hamming_dist = (\n",
     "    data_df[\"barcode\"].compute().apply(lambda x: closest_match_dict[x])\n",
     ")\n",
     "\n",
     "data_df[\"hamm_ref\"] = hamm_ref\n",
-    "data_df[\"dark_gfp\"] = dark_gfp\n",
+    "data_df[\"UMI\"] = UMI\n",
+    "data_df[\"sgRNA\"] = sgRNA\n",
     "data_df[\"Closest Hamming Distance\"] = closest_hamming_dist\n",
     "data_df = data_df.persist()\n",
     "\n",
     "del hamm_ref\n",
-    "del dark_gfp\n",
     "del closest_hamming_dist\n",
     "del aligned_cons\n",
     "del split_align\n",
@@ -618,9 +676,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GFP_freq = (\n",
-    "    np.unique(data_df[\"dark_gfp\"], return_counts=True)[1] / data_df[\"dark_gfp\"].size\n",
-    ")"
+    "UMI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Frequency Distributions"
    ]
   },
   {
@@ -629,7 +692,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GFP_freq"
+    "data_df[\"barcode\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_df.groupby(\"sgRNA\").size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_barcodes = data_df.groupby(\"sgRNA\").size()[4:]"
    ]
   },
   {
@@ -640,11 +721,120 @@
    },
    "outputs": [],
    "source": [
-    "## Metadata stored as a json for later\n",
-    "import json\n",
-    "\n",
-    "with open(\"./lDE15_final_df.json\", \"w\") as f:\n",
-    "    json.dump(output_metadata, f)"
+    "# sgRNA_data = pd.read_csv(\"2021-04-20_Essential_KO_Lib_df.tsv\",sep=\"\\t\",dtype={\"Unnamed: 0\": np.int32,\"sgRNA Sequence\":str,\"Gene\":str,\"Strand\":str,\\\n",
+    "#                                                                               \"Target Sequence\":str,'Target Sites':np.object,'EcoWG1_id': np.int32, 'N Target Sites': np.int32,\\\n",
+    "#                                                                               'N Mismatch':  np.int32, 'Category': str, 'TargetID': np.int32,'Sequence To Order':str,\\\n",
+    "#                                                                              'bbsi site':bool,'bsmbi site':bool,'bsai site':bool})\n",
+    "sgRNA_data = pd.read_csv(\n",
+    "    \"2021-04-20_Essential_KO_Lib_df_coords_corrected.tsv\", sep=\"\\t\"\n",
+    ")\n",
+    "sgRNA_data = sgRNA_data[\n",
+    "    (sgRNA_data[\"Category\"] != \"OnlyChr\")\n",
+    "    & (sgRNA_data[\"Category\"] != \"NonEssentialOnlyChr\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgRNA_dict = sgRNA_data[\"sgRNA Sequence\"].to_dict()\n",
+    "sgRNA_inv_dict = {val: key for key, val in sgRNA_dict.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sgRNA_inv_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "valid_mask = data_df[\"sgRNA\"].isin(sgRNA_inv_dict.keys())\n",
+    "valid_data_df = data_df[valid_mask]\n",
+    "index_map = valid_data_df[\"sgRNA\"].apply(lambda x: sgRNA_inv_dict[x])\n",
+    "sgRNA_data_subset = sgRNA_data.loc[index_map.to_list()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = valid_data_df.reset_index(drop=True).join(\n",
+    "    sgRNA_data_subset[\n",
+    "        [\n",
+    "            \"oDEPool7_id\",\n",
+    "            \"EcoWG1_id\",\n",
+    "            \"Gene\",\n",
+    "            \"Strand\",\n",
+    "            \"Target Sequence\",\n",
+    "            \"Target Sites\",\n",
+    "            \"N Target Sites\",\n",
+    "            \"N Mismatch\",\n",
+    "            \"Category\",\n",
+    "            \"TargetID\",\n",
+    "        ]\n",
+    "    ].reset_index(drop=True)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "gene_groupby = merged_df.groupby(\"Gene\")\n",
+    "gene_counts = gene_groupby.size()\n",
+    "plt.hist(gene_counts, bins=100)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_groupby = merged_df.groupby(\"Gene\")\n",
+    "gene_counts = gene_groupby.size()\n",
+    "plt.hist(gene_counts, range=(0, 50))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_counts[gene_counts < 50]"
    ]
   },
   {
@@ -654,7 +844,16 @@
    "outputs": [],
    "source": [
     "## Storing dataframe as a csv\n",
-    "data_df.to_csv(\"./lDE15_final_df.tsv\", sep=\"\\t\")"
+    "merged_df.to_csv(\"./lDE20_final_df.tsv\", sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller.shutdown()"
    ]
   },
   {
@@ -681,7 +880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
