--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/2_Mapping_Barcodes_and_Cleaning_Data.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/2_Mapping_Barcodes_and_Cleaning_Data.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "dask_controller.shutdown()"
+    "dask_controller.daskclient.restart()"
    ]
   },
   {
@@ -120,6 +120,19 @@
     "ttl_trenches_w_cells = pandas_barcode_df.metadata[\"Total Trenches With Cells\"]\n",
     "percent_called = ttl_called / ttl_trenches\n",
     "percent_called_w_cells = ttl_called / ttl_trenches_w_cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ttl_called)\n",
+    "print(ttl_trenches)\n",
+    "print(ttl_trenches_w_cells)\n",
+    "print(percent_called)\n",
+    "print(percent_called_w_cells)"
    ]
   },
   {
@@ -814,7 +827,7 @@
    "outputs": [],
    "source": [
     "final_output_df.to_parquet(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-08-10_lDE20_Lineage_Analysis\",\n",
+    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-09-24_lDE20_Lineage_Analysis\",\n",
     "    engine=\"fastparquet\",\n",
     "    overwrite=True,\n",
     ")"
@@ -857,7 +870,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -871,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.5"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
