--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/3_Feature_Processing.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/3_Feature_Processing.ipynb
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "final_output_df = dd.read_parquet(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-08-10_lDE20_Lineage_Analysis\",\n",
+    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-09-24_lDE20_Lineage_Analysis\",\n",
     "    engine=\"fastparquet\",\n",
     ")\n",
     "final_output_df = final_output_df.dropna(\n",
@@ -835,7 +835,7 @@
    "outputs": [],
    "source": [
     "trace_df_nan_filtered.to_pickle(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-08-24_gene_cluster_df_no_filter.pkl\"\n",
+    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-09-25_gene_cluster_df_no_filter.pkl\"\n",
     ")"
    ]
   },
@@ -846,7 +846,7 @@
    "outputs": [],
    "source": [
     "sgrnadf_strong_effect.to_pickle(\n",
-    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-08-24_gene_cluster_df.pkl\"\n",
+    "    \"/home/de64/scratch/de64/sync_folder/2021-06-14_lDE20_biofloat_fullrun_1/2021-09-25_gene_cluster_df.pkl\"\n",
     ")"
    ]
   },
@@ -1153,7 +1153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1167,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.5"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
