[shenker/cloning,cloning] WIP primer design.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210720 Terminators.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210720 Terminators.ipynb
@@ -272,6 +272,8 @@
     "\n",
     "\n",
     "def align(a, b):\n",
+    "    a = a.lower()\n",
+    "    b = b.lower()\n",
     "    # return pairwise2.align.localxs(a, b, -0.5, -0.5)\n",
     "    return pairwise2.align.localms(a, b, 1, -0.5, -0.5, -0.5)\n",
     "\n",
@@ -689,7 +691,7 @@
     "all_terminators = pd.concat((synthetic_terminators, natural_terminators))\n",
     "strong_all = all_terminators.sort_values(\"Average Strength\", ascending=False)[\n",
     "    [\"Average Strength\", \"Length\", \"Sequence\"]\n",
-    "][:60]\n",
+    "][:80]\n",
     "strong_all[-20:]"
    ]
   },
@@ -791,7 +793,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strong_all.loc[\"L3S1P00\"]"
+    "strong_all.loc[\"ECK120010869\"]"
    ]
   },
   {
@@ -803,12 +805,12 @@
     "%%time\n",
     "insulation_pool_8 = get_nonrepetitive(\n",
     "    similarity,\n",
-    "    0.6,\n",
+    "    0.7,\n",
     "    natural_terminators[\"Sequence\"],\n",
     "    selected_bidirectional_terms[\"sequence\"],\n",
     "    8,\n",
     "    enzymes=ENZYMES,\n",
-    "    blacklist=[\"BBa_B0010\"],\n",
+    "    blacklist=[\"BBa_B0010\", \"pheA-1\"],  # IDT seems unable to make pheA-1 as a gBlock\n",
     ")"
    ]
   },
@@ -827,7 +829,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "show_heatmap(strong_all_sim[[\"pheA-1\", \"ECK120015440\", \"ECK120010799\", \"ECK120010855\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_heatmap(\n",
+    "    strong_all_sim[[\"ECK120029600\", \"ECK120033736\", \"BBa_B0062-R\", \"ECK120010869\"]]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "show_heatmap(strong_all_sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "natural_terminators[\"Sequence\"]  # [:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "insulation_pool_4 = get_nonrepetitive(\n",
+    "    similarity,\n",
+    "    0.7,\n",
+    "    natural_terminators[\"Sequence\"],\n",
+    "    selected_bidirectional_terms[\"sequence\"],\n",
+    "    4,\n",
+    "    enzymes=ENZYMES,\n",
+    "    # BBa_B0010 is already a double-term\n",
+    "    # IDT seems unable to make pheA-1 as a gBlock\n",
+    "    # last four are from oLT75 (which was synthesized successfully)\n",
+    "    blacklist=[\n",
+    "        \"BBa_B0010\",\n",
+    "        \"pheA-1\",\n",
+    "        \"ECK120029600\",\n",
+    "        \"ECK120033736\",\n",
+    "        \"BBa_B0062-R\",\n",
+    "        \"ECK120010869\",\n",
+    "    ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "insulation_pool_4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strong_all.loc[\"ECK120017009\"]"
    ]
   },
   {
@@ -846,6 +923,15 @@
     "    \"upstream\": backbone_insulation_2r2[1],\n",
     "    \"downstream\": backbone_insulation_2r2[0],\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backbone_insulation_2r2"
    ]
   },
   {
